# xml-rpc-rs

./: Cargo.toml  README.md
examples/: echo.rs  threadcheck.rs
hyper10/: Cargo.toml
hyper10/src/: lib.rs
src/: client.rs  error.rs  lib.rs  messages.rs  server.rs  util.rs  value.rs
src/xmlfmt/: README.md  de.rs  error.rs  mod.rs  parse.rs  ser.rs  tests.rs  value.rs
src/xmlfmt/templates/: call.xml  call_1.xml  call_2.xml  response_fault.xml  response_success.xml  response_success_1.xml  response_success_2.xml
src/xmlfmt/tests/: de.rs  mod.rs  parsevalue.rs  ser.rs
