[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Pure Rust implementation of XML-RPC"
license = "MIT"
name = "xml-rpc"
readme = "README.md"
repository = "https://github.com/adnanademovic/xml-rpc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
xml-rs = "0.8.4"
