[package]
authors = ["Adnan Ademovic <adnanademovic100@gmail.com>"]
description = "Pure Rust implementation of XML-RPC"
license = "MIT"
name = "xml-rpc"
readme = "README.md"
repository = "https://github.com/adnanademovic/xml-rpc-rs"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
error-chain = "0.12.4"
hyper = "0.10.15"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_bytes = "0.11.15"
xml-rs = "0.8.25"
rouille = "3.6.2"
